<resources>
    <string name="app_name">MyAndroidApp</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button_back">Back</string>
    <string name="string_age">13+</string>
    <string name="string_movie_name">
        Avengers:\nEnd Game
    </string>
    <string name="string_movie_genres">Action, Adventure, Fantasy</string>
    <string name="string_number_of_reviews">125 REVIEWS</string>
    <string name="string_storyline">Storyline</string>
    <string name="string_movie_description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="string_cast">Cast</string>
    <string name="text_actor_1">Robert Downey Jr.</string>
    <string name="text_actor_2">Chris Evans</string>
    <string name="text_actor_3">Mark Ruffalo</string>
    <string name="text_actor_4">Chris Evans</string>
    <string name="avengers_poster">Avengers poster</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_list">Movies list</string>
</resources>
