<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/background_image"
            android:src="@drawable/background_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:adjustViewBounds="true"/>
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="59dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="@id/background_image"
            app:layout_constraintTop_toTopOf="@id/background_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:alpha="0.5"
            android:text="@string/button_back"
            android:textColor="@color/textColorWhite"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/back_button"
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintTop_toTopOf="@id/back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/string_age"
            android:textColor="@color/textColorWhite"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/movie_name"
            app:layout_constraintStart_toStartOf="@id/movie_name" />

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="254dp"
            android:layout_marginEnd="16dp"
            android:text="@string/string_movie_name"
            android:textColor="@color/textColorWhite"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/background_image"
            app:layout_constraintBottom_toBottomOf="@id/background_image"
            />

        <TextView
            android:id="@+id/movie_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/string_movie_genres"
            android:textColor="@color/textColorRed"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_name" />

        <ImageView
            android:id="@+id/star1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon_red"
            app:layout_constraintEnd_toStartOf="@id/star2"
            app:layout_constraintStart_toStartOf="@id/movie_genre"
            app:layout_constraintTop_toBottomOf="@id/movie_genre" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:src="@drawable/ic_star_icon_red"
            app:layout_constraintBottom_toBottomOf="@id/star1"
            app:layout_constraintEnd_toStartOf="@id/star3"
            app:layout_constraintStart_toEndOf="@id/star1"
            app:layout_constraintTop_toTopOf="@id/star1" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:src="@drawable/ic_star_icon_red"
            app:layout_constraintBottom_toBottomOf="@id/star2"
            app:layout_constraintEnd_toStartOf="@id/star4"
            app:layout_constraintStart_toEndOf="@id/star2"
            app:layout_constraintTop_toTopOf="@id/star2" />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:src="@drawable/ic_star_icon_red"
            app:layout_constraintBottom_toBottomOf="@id/star3"
            app:layout_constraintEnd_toStartOf="@id/star5"
            app:layout_constraintStart_toEndOf="@id/star3"
            app:layout_constraintTop_toTopOf="@id/star3" />

        <ImageView
            android:id="@+id/star5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:src="@drawable/ic_star_icon_gray"
            app:layout_constraintBottom_toBottomOf="@id/star4"
            app:layout_constraintStart_toEndOf="@id/star4"
            app:layout_constraintTop_toTopOf="@id/star3" />

        <TextView
            android:id="@+id/number_of_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8.89dp"
            android:text="@string/string_number_of_reviews"
            android:textColor="@color/textColorGray"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/star5"
            app:layout_constraintStart_toEndOf="@id/star5"
            app:layout_constraintTop_toTopOf="@id/star5" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/string_storyline"
            android:textColor="@color/textColorWhite"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number_of_reviews" />

        <TextView
            android:id="@+id/story_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/string_movie_description"
            android:textColor="@color/textColorWhite"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/storyline"
            app:layout_constraintTop_toBottomOf="@id/storyline" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/string_cast"
            android:textColor="@color/textColorWhite"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/story_description"
            app:layout_constraintTop_toBottomOf="@id/story_description" />

        <ImageView
            app:layout_constraintDimensionRatio="1:1"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:id="@+id/iv_actor1"
            android:layout_marginTop="7dp"
            android:layout_marginStart="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/robert_downey_jr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_actor2"
            app:layout_constraintTop_toBottomOf="@id/cast"/>

        <TextView
            android:id="@+id/tv_actor1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/text_actor_1"
            android:textColor="@color/textColorWhite"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/iv_actor1"
            app:layout_constraintEnd_toEndOf="@id/iv_actor1"
            app:layout_constraintTop_toBottomOf="@id/iv_actor1" />

        <ImageView
            app:layout_constraintDimensionRatio="1:1"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:id="@+id/iv_actor2"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/chris_evans"
            app:layout_constraintBottom_toBottomOf="@id/iv_actor1"
            app:layout_constraintStart_toEndOf="@id/iv_actor1"
            app:layout_constraintEnd_toStartOf="@id/iv_actor3"
            app:layout_constraintTop_toTopOf="@id/iv_actor1" />

        <TextView
            android:id="@+id/tv_actor2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/text_actor_2"
            android:textColor="@color/textColorWhite"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/iv_actor2"
            app:layout_constraintEnd_toEndOf="@id/iv_actor2"
            app:layout_constraintTop_toBottomOf="@id/iv_actor2" />

        <ImageView
            app:layout_constraintDimensionRatio="1:1"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:id="@+id/iv_actor3"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/mark_ruffalo"
            app:layout_constraintBottom_toBottomOf="@id/iv_actor2"
            app:layout_constraintStart_toEndOf="@id/iv_actor2"
            app:layout_constraintEnd_toStartOf="@id/iv_actor4"
            app:layout_constraintTop_toTopOf="@id/iv_actor2" />

        <TextView
            android:id="@+id/tv_actor3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/text_actor_3"
            android:textColor="@color/textColorWhite"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/iv_actor3"
            app:layout_constraintEnd_toEndOf="@id/iv_actor3"
            app:layout_constraintTop_toBottomOf="@id/iv_actor3" />

        <ImageView
            app:layout_constraintDimensionRatio="1:1"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:id="@+id/iv_actor4"
            android:scaleType="centerCrop"
            android:src="@drawable/chris_hemsworth"
            app:layout_constraintBottom_toBottomOf="@id/iv_actor3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_actor3"
            app:layout_constraintTop_toTopOf="@id/iv_actor3" />

        <TextView
            android:id="@+id/tv_actor4"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/text_actor_4"
            android:textColor="@color/textColorWhite"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/iv_actor4"
            app:layout_constraintEnd_toEndOf="@id/iv_actor4"
            app:layout_constraintTop_toBottomOf="@id/iv_actor4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>